[package]
name = "audio_engine"
version = "0.1.0"
edition = "2024"

[dependencies]
rtrb = "0.3.2"
flume = "0.12.0"
thiserror = "2.0.18"
crossbeam = "0.8.4"
portable-atomic = "1.13.1"
cpal = "0.15"
[dev-dependencies]

criterion = "0.8.2"


[profile.release]
opt-level = 3
lto = "thin"
codegen-units = 1
panic = "abort"

[profile.dev]
opt-level = 1

[lints.rust]
unsafe_code = "forbid"

[lints.clippy]
all = "warn"
pedantic = "warn"
nursery = "warn"
cast_possible_truncation = "deny"
cast_sign_loss = "deny"
cast_precision_loss = "deny"
cast_possible_wrap = "deny"
cast_lossless = "deny"